Corrected all JavaScript security vulnerabilities except simplemde
There doesn't (yet) seem to be a fix for the simplemde problem.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ pom.xml.asc
 smeagol.log*
 /node_modules/
 .DS_Store
+.clj-kondo/
+.idea/
+.calva/
+.lsp
+.eastwood
+smeagol.iml
 
 
 resources/public/content/uploads/
